@@ -23,6 +23,7 @@ Verilator 5.019 devel
 * Remove deprecated options (#4663). [Geza Lore]
 * Optimize timing-delayed queue (#4584). [qrqiuren]
 * Fix VPI TOP level variable iteration (#3919) (#4618). [Marlon James]
+* Fix display with no % printing assoc array (#4376). [Alex Solomatnikov]
 * Fix scheduling of external force signals (#4577) (#4668). [Geza Lore]
 * Fix a memory leak in V3Fork (#4628). [Krzysztof Boroński]
 * Fix linking parameterized hierarchical blocks and recursive hierarchical blocks (#4654). [Anthony Donlon]
